+adv model, migrations, adv endpoints templates, sqlc generated code
