# docs/swagger.json
@@ -87,13 +87,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "password_reset"
+                    "password-reset"
                 ],
                 "summary": "POST request to update password",
                 "parameters": [
                     {
                         "description": "user email for update",
-                        "name": "password_reset",
+                        "name": "password-reset",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -147,6 +147,102 @@
                 }
             }
         },
+        "/api/protected/advertisement-create": {
+            "post": {
+                "description": "endpoint for advertisement creation",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "advertisement-create"
+                ],
+                "summary": "POST request to create advertisement",
+                "parameters": [
+                    {
+                        "description": "advertisement information",
+                        "name": "advertisement-create",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/queries.Advertisement"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/protected/advertisement-delete": {
+            "delete": {
+                "description": "endpoint for advertisement deletion by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "advertisement-delete"
+                ],
+                "summary": "PATCH request to delete advertisement",
+                "parameters": [
+                    {
+                        "description": "advertisement id",
+                        "name": "advertisement-delete",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Id"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/api/protected/advertisement-patch": {
+            "patch": {
+                "description": "endpoint for advertisement update",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "advertisement-patch"
+                ],
+                "summary": "PATCH request to update advertisement",
+                "parameters": [
+                    {
+                        "description": "advertisement information",
+                        "name": "advertisement-patch",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/queries.Advertisement"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/protected/user-patch": {
             "patch": {
                 "security": [
@@ -159,7 +255,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user_update"
+                    "user-patch"
                 ],
                 "summary": "PATCH request to update user",
                 "parameters": [
@@ -172,7 +268,7 @@
                     },
                     {
                         "description": "user info for update",
-                        "name": "user_info",
+                        "name": "userinfo",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -203,7 +299,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user_info"
+                    "userinfo"
                 ],
                 "summary": "Get request to see user info",
                 "parameters": [
@@ -236,6 +332,17 @@
                 }
             }
         },
+        "models.Id": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.InLogin": {
             "type": "object",
             "properties": {
@@ -243,6 +350,56 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "queries.Advertisement": {
+            "type": "object",
+            "properties": {
+                "attachment": {
+                    "type": "string"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "experience": {
+                    "type": "string"
+                },
+                "format": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "language": {
+                    "type": "string"
+                },
+                "mobile_phone": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "provider": {
+                    "type": "string"
+                },
+                "telegram": {
+                    "type": "string"
+                },
+                "time": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
