# queries/entities.go
@@ -1,12 +1,30 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.22.0
+//   sqlc v1.23.0
 
 package queries
 
 import (
 	"time"
 )
+
+type Advertisement struct {
+	ID          int64     `json:"id"`
+	Title       string    `json:"title"`
+	Provider    string    `json:"provider"`
+	Attachment  string    `json:"attachment"`
+	Experience  string    `json:"experience"`
+	Category    string    `json:"category"`
+	Time        string    `json:"time"`
+	Price       int32     `json:"price"`
+	Format      string    `json:"format"`
+	Language    string    `json:"language"`
+	Description string    `json:"description"`
+	MobilePhone string    `json:"mobile_phone"`
+	Email       string    `json:"email"`
+	Telegram    string    `json:"telegram"`
+	CreatedAt   time.Time `json:"created_at"`
+}
 
 type User struct {
 	ID        int64     `json:"id"`
